<resources>
    <string name="app_name">KotlinCalculator</string>
    <string name="ac">AC</string>
    <string name="Five">5</string>
    <string name="Four">4</string>
    <string name="plus">+</string>
    <string name="Three">3</string>
    <string name="Two">2</string>
    <string name="One">1</string>
    <string name="x">x</string>
    <string name="Eight">8</string>
    <string name="Seven">7</string>
    <string name="Six">6</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="X">X</string>
    <string name="Back"><![CDATA[<-]]></string>
    <string name="Nine">9</string>
    <string name="Dots">.</string>
    <string name="Zeros">0</string>
</resources>